# h-kennis

./: .gitignore  Cargo.toml  README.md  flake.nix  package-lock.json  package.json
dnas/kennis/workdir/: dna.yaml
dnas/kennis/zomes/coordinator/document/: Cargo.toml
dnas/kennis/zomes/coordinator/document/src/: document.rs  lib.rs
dnas/kennis/zomes/integrity/document/: Cargo.toml
dnas/kennis/zomes/integrity/document/src/: document.rs  lib.rs
tests/src/kennis/document/: common.ts  document.test.ts
ui/src/: App.vue
ui/src/kennis/document/: CreateDocument.vue  DocumentDetail.vue  EditDocument.vue  types.ts
workdir/: happ.yaml  web-happ.yaml
